fixed overflow in list

--- a/ReactApp/style/CarList.css
+++ b/ReactApp/style/CarList.css
@@ -32,7 +32,7 @@
   font-weight: bold;
   top: 0;
   display: grid;
-  position: sticky;
+  position: relative;
   width: 100%;
 }
 
@@ -60,5 +60,6 @@
   background-color: #F7F7F7;
   overflow-y:scroll;
   height: 760px;
+  position: inherit;
   max-height: 760px;
 }
