--- a/ReactApp/style/CarListItem.css
+++ b/ReactApp/style/CarListItem.css
@@ -4,6 +4,7 @@
   border-bottom: 1px solid #ABABAB;
   margin: 0;
   width: 100%;
+  position: relative;
   display: inline-flex;
   overflow-x: hidden
 }
